--- a/src/Iris/core/engine/css/default.css
+++ b/src/Iris/core/engine/css/default.css
@@ -152,3 +152,81 @@
   -moz-user-select:none;
 }                                                    
 
+
+/* Emails */
+
+.content_wrapper {
+	box-shadow: 0 0 40px rgba(0,0,0,0.5);
+	padding: 10px;
+}
+
+.source_name_Email div[conttype="inner"] {
+	padding-left: 20px;
+	padding-right: 10px;
+}
+
+.mail_header {
+	padding: 0;
+}
+
+.mail_header h2 {
+	margin: 0;
+}
+
+iframe.email {
+	border: none;
+	width: 100%;
+}
+
+.email_address {
+	color: #666;
+}
+.mail_header_title {
+	padding: 10px 0 0 0;
+	cursor: pointer;
+}
+.mail_header_title h2 {
+	font-weight: 200;
+}
+.mail_header_title small {
+	color: #666;
+	float: right;
+}
+
+.source_name_Email table.grid tr td:nth-child(4), .source_name_Email table.grid tr td:nth-child(4) * {
+	cursor: pointer;
+}
+
+.email_properties div {
+	display: inline-block;
+	vertical-align: top;
+	max-width: 500px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.email_properties .spacer {
+	width: 20px;
+}
+.email_properties .file {
+	background-color: #f0f0f0;
+	padding: 5px;
+	margin-bottom: 2px;
+	border-radius: 2px;
+}
+.email_properties .file div {
+	max-width: 100px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.email_properties .filename {
+	padding: 2px 0;
+}
+.email_properties .extension {
+	background-color: gray;
+	padding: 2px 5px;
+	border-radius: 2px;
+	color: white;
+	text-transform: uppercase;
+}
