--- a/src/Iris/core/templates/bootstrap/css/card.css
+++ b/src/Iris/core/templates/bootstrap/css/card.css
@@ -259,11 +259,11 @@ input.fileinput_originalFileInput {
 }
 
 .fileinput_caption  {
-	color		: Gray;
-	padding-left: 19px;
+	width: 16px;
+  height: 16px;
+  margin: 8px 0 8px 8px;
 }
-.fileinput_caption span {
-	float: left;
+.fileinput_glyphicon {
 	cursor		: pointer;
 	margin-top: 10px;
 	margin-left: 10px;
@@ -273,6 +273,12 @@ input.fileinput_originalFileInput {
 	padding-top: 8px;
 	padding-left: 10px;
 	float: left;
+}
+
+input.has-error {
+  border-color: #a94442;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 }
 /* ************************************************************************************** */
 
@@ -295,21 +301,29 @@ td.iris_win_content {
 	padding: 0;
 }
 
-div.iris_win_title {
-	padding-top: 0;
-	padding-bottom: 0;
-	margin-top: 0;
-	margin-bottom: 0;
-}
-
 .card_content {
 	padding-top: 0;
 	padding-bottom: 0;
 }
 
-.form_table hr {
-	margin-top: 10px;
-	margin-bottom: 10px;
+div.splitter-start-container {
+  width: 3em;
+  padding-right: 1em;
+}
+div.splitter-end-container {
+	padding-left: 1em;
+}
+hr.splitter {
+  color: #909090;
+  background-color: #909090;
+  height: 1px;
+  border-width: 0px;
+  margin: 0;
+}
+span.splitter-caption {
+	display: block;
+	margin: 0.35em 0;
+  font-size: 1.2em;
 }
 
 .card_header_table {
@@ -364,7 +378,8 @@ div.checkbox {
 	margin-top: 7px;
 	margin-bottom: 7px;
 }
-.required label {
+.required label,
+.card_page_invalid_data {
 	color: #b94a48;
 }
 .radiobtn-values {
@@ -382,4 +397,13 @@ div.checkbox {
 }
 .multiline.first {
 	margin-top: 10px;
+}
+
+div.row {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+div.matrix-delete-button-container {
+	width: 2.5em;
 }
