--- a/src/Iris/core/templates/bootstrap/css/card.css
+++ b/src/Iris/core/templates/bootstrap/css/card.css
@@ -160,14 +160,14 @@ div.card_bottom_buttons_div {
 	cursor				: default;	
 }
 
-span.card_top_panel_button {
-	cursor         : pointer;
-	text-decoration: underline;
-  padding-left   : 5px;
-  padding-right  : 5px;
+.card_top_buttons_div a {
+	color: #337ab7; /* bootstrap link color*/
 }
-span.card_top_panel_button_hover  {
-	color				: #484F9E;
+.card_top_buttons_div a:hover {
+	color: #23527c; /* bootstrap link hover color*/
+}
+.card_header_separator {
+	color: #337ab7; /* bootstrap link color*/
 }
 /*-----------------------------------------------------*/
 
@@ -249,6 +249,10 @@ div.url_img {
 	height				: 17px;
 }
 
+label[title] {
+	text-decoration: underline dotted;
+	cursor: pointer;
+}
 
 
 
@@ -259,9 +263,8 @@ input.fileinput_originalFileInput {
 }
 
 .fileinput_caption  {
-	width: 16px;
-  height: 16px;
-  margin: 8px 0 8px 8px;
+	font-size: 1.5em;
+  margin: 0.25em 0 0 0.5em;
 }
 .fileinput_glyphicon {
 	cursor		: pointer;
@@ -355,9 +358,15 @@ span.splitter-caption {
 	padding-left: 0;
 }
 
-.card_content .form-control {
+.card_content .form-control,
+/* report params window */
+td.form_table .form-control {
 	margin-top: 2px;
 	margin-bottom: 2px;
+}
+/* report params window */
+td.form_table .calendar_img {
+	margin: auto;
 }
 
 .spacer {
@@ -371,9 +380,19 @@ span.splitter-caption {
 div.checkbox {
 	padding-left: 36px;
 }
+
 .form-group {
 	margin-bottom: 0;
 }
+.form-group:last-child {
+	padding-right: 15px;
+}
+@media (min-width: 768px) {
+	.form-group {
+		padding-right: 0;
+	}
+}
+
 .checkbox {
 	margin-top: 7px;
 	margin-bottom: 7px;
