--- a/src/Iris/core/templates/classic/css/card.css
+++ b/src/Iris/core/templates/classic/css/card.css
@@ -27,6 +27,17 @@ input.edtText, textarea.edtText {
 	padding-left     : 3px;
 	padding-right    : 3px;
 }
+/* 
+  fix textarea height in firefox
+  https://stackoverflow.com/questions/7695945/height-of-textarea-does-not-match-the-rows-in-firefox/22700700#22700700
+*/
+@-moz-document url-prefix() {
+	textarea.edtText,
+	textarea.edtText_selected {
+		overflow-x: hidden;
+	}
+}
+
 /* выпадающий список */
 select.edttext {
 	color            : Black;
