--- a/src/Iris/core/templates/bootstrap/css/window.css
+++ b/src/Iris/core/templates/bootstrap/css/window.css
@@ -22,7 +22,7 @@
 .iris_win_nw,
 .iris_win_n,
 .iris_win_ne {
-  background-color: #e7e7e7;
+  background-color: #eee;
   height: 34px;
   user-select: none;
 }
